# advent-of-code-2020

./: CMakeLists.txt  README.md  advent-of.code-workspace  build  run
source/: CMakeLists.txt
source/day-01/: CMakeLists.txt  main.cc
source/day-02/: CMakeLists.txt  main.cc  password.cc  password.h  test.cc
source/day-03/: CMakeLists.txt  main.cc  slope.cc  slope.h
source/day-04/: CMakeLists.txt  main.cc  passport.cc  passport.h
source/day-05/: CMakeLists.txt  main.cc  seat.cc  seat.h  test.cc
source/day-06/: CMakeLists.txt  form.cc  form.h  main.cc
source/day-07/: CMakeLists.txt  bag.cc  bag.h  main.cc  test.cc
source/day-08/: CMakeLists.txt  boot.cc  boot.h  main.cc  test.cc
source/day-09/: CMakeLists.txt  main.cc  test.cc  xmas.cc  xmas.h
source/day-10/: CMakeLists.txt  jolt.cc  jolt.h  main.cc  test.cc
source/day-11/: CMakeLists.txt  main.cc  seats.cc  seats.h  test.cc
source/day-12/: CMakeLists.txt  ferry.cc  ferry.h  main.cc  test.cc
source/day-13/: CMakeLists.txt  bus.cc  bus.h  main.cc  test.cc
source/day-14/: CMakeLists.txt  main.cc  port.cc  port.h  test.cc
source/day-15/: CMakeLists.txt  game.cc  game.h  main.cc  test.cc
source/day-16/: CMakeLists.txt  main.cc  test.cc  ticket.cc  ticket.h
source/day-17/: CMakeLists.txt  cube.cc  cube.h  main.cc  test.cc
source/day-18/: CMakeLists.txt  main.cc  math.cc  math.h  parser.cc  parser.h  test.cc
source/day-19/: CMakeLists.txt  main.cc  message.cc  message.h  test.cc
source/day-20/: CMakeLists.txt  jigsaw.cc  jigsaw.h  main.cc  test.cc
source/day-21/: CMakeLists.txt  food.cc  food.h  main.cc  test.cc
source/day-22/: CMakeLists.txt  cards.cc  cards.h  main.cc  test.cc
source/day-23/: CMakeLists.txt  cups.cc  cups.h  (+2 more)
(+10 files in other folders)
