add_subdirectory(day-01)
add_subdirectory(day-02)
add_subdirectory(day-03)
add_subdirectory(day-04)
add_subdirectory(day-05)
add_subdirectory(day-06)
add_subdirectory(day-07)
add_subdirectory(day-08)
add_subdirectory(day-09)
add_subdirectory(day-10)
add_subdirectory(day-11)
add_subdirectory(day-12)
add_subdirectory(day-13)
add_subdirectory(day-14)
add_subdirectory(day-15)
add_subdirectory(day-16)

add_subdirectory(day-18)
add_subdirectory(day-19)
add_subdirectory(day-20)
add_subdirectory(day-21)
